# iortcw

./: .gitignore  CMakeLists.txt
SP/code/cgame/: cg_draw.c  cg_event.c  cg_local.h  cg_local_nodl.h  cg_main.c  cg_players.c  cg_syscalls_nodl.c  cg_view.c  cg_weapons.c
SP/code/client/: cl_cgame.c
SP/code/game/: ai_dmq3.c  bg_misc.c  bg_pmove.c  g_func_decs.h  g_local.h  g_main.c  g_syscalls.c
SP/code/qcommon/: vm.c
SP/code/sdl/: sdl_input.c
SP/code/sys/: sys_loadlib.c  sys_loadlib.h
SP/code/ui/: ui_atoms.c  ui_shared.c  ui_shared.h  ui_syscalls.c
